[project]
name = "mip_matching"
version = "0.0.1"
description = "Project for matching meetings using Mixed Integer Linear Programming"
dependencies = [
    "cffi==1.15.0",
    "Faker==24.11.0",
    "mip==1.14.2",
    "pycparser==2.21",
    "python-dateutil==2.9.0.post0",
    "six==1.16.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mip_matching"]